CMAKE_MINIMUM_REQUIRED( VERSION 3.25 )

SET( CMAKE_CXX_STANDARD 20 )
SET( CMAKE_CXX_STANDARD_REQUIRED ON )

PROJECT( Sudoku_Game )

ADD_EXECUTABLE( ${PROJECT_NAME} "Source Code/EntryPoint.cpp" )

SET_TARGET_PROPERTIES( ${PROJECT_NAME} PROPERTIES
                       PREFIX ""
                       OUTPUT_NAME "${PROJECT_NAME}_${CMAKE_BUILD_TYPE}" )

ADD_SUBDIRECTORY( "Source Code" )